# far-science

./: .gitignore  LICENSE.md  README.md  pyproject.toml  story.txt
src/far_science/: __init__.py  __main__.py  action_utils.py  actions.py  bacteria.py  bool_state.py  context.py  dialogue.py  hint.py  player.py  post_events.py  questing.py  science.py  sentinel.py  state.py  station.py  terminal.py  traits.py  world_gen.py
src/far_science/quests/: __init__.py  ai_guidance_center.py  cargo_hold.py  hydroponics.py  launch_array.py  medical_bay.py  nuclear_reactor.py  science_lab.py  sleep_pod.py
